--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -19,7 +19,7 @@
     --white: #fff;
     --gray: #6c757d;
     --gray-dark: #343a40;
-    --primary: #7ab730;
+    --primary: #f6ce11;
     --secondary: #f4faec;
     --success: #28a745;
     --info: #17a2b8;
@@ -167,13 +167,13 @@ sup {
 }
 
 a {
-    color: #7ab730;
+    color: #f6ce11;
     text-decoration: none;
     background-color: transparent;
 }
 
 a:hover {
-    color: #527a20;
+    color: #967d00;
     text-decoration: underline;
 }
 
@@ -2540,37 +2540,37 @@ fieldset:disabled a.btn {
 
 .btn-primary {
     color: #fff;
-    background-color: #7ab730;
-    border-color: #7ab730;
+    background-color: #f6ce11;
+    border-color: #f6ce11;
 }
 
 .btn-primary:hover {
     color: #fff;
-    background-color: #669928;
-    border-color: #5f8f25;
+    background-color: #c9a803;
+    border-color: #9b8102;
 }
 
 .btn-primary:focus,
 .btn-primary.focus {
     color: #fff;
-    background-color: #669928;
-    border-color: #5f8f25;
+    background-color: #c9a803;
+    border-color: #9b8102;
     box-shadow: 0 0 0 0.2rem rgba(142, 194, 79, 0.5);
 }
 
 .btn-primary.disabled,
 .btn-primary:disabled {
     color: #fff;
-    background-color: #7ab730;
-    border-color: #7ab730;
+    background-color: #f6ce11;
+    border-color: #f6ce11;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active,
 .btn-primary:not(:disabled):not(.disabled).active,
 .show > .btn-primary.dropdown-toggle {
     color: #fff;
-    background-color: #5f8f25;
-    border-color: #588423;
+    background-color: #9b8102;
+    border-color: #6d5d0c;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active:focus,
@@ -2867,14 +2867,14 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-    color: #7ab730;
-    border-color: #7ab730;
+    color: #f6ce11;
+    border-color: #f6ce11;
 }
 
 .btn-outline-primary:hover {
     color: #fff;
-    background-color: #7ab730;
-    border-color: #7ab730;
+    background-color: #f6ce11;
+    border-color: #f6ce11;
 }
 
 .btn-outline-primary:focus,
@@ -2884,7 +2884,7 @@ fieldset:disabled a.btn {
 
 .btn-outline-primary.disabled,
 .btn-outline-primary:disabled {
-    color: #7ab730;
+    color: #f6ce11;
     background-color: transparent;
 }
 
@@ -2892,8 +2892,8 @@ fieldset:disabled a.btn {
 .btn-outline-primary:not(:disabled):not(.disabled).active,
 .show > .btn-outline-primary.dropdown-toggle {
     color: #fff;
-    background-color: #7ab730;
-    border-color: #7ab730;
+    background-color: #f6ce11;
+    border-color: #f6ce11;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus,
@@ -3156,12 +3156,12 @@ fieldset:disabled a.btn {
 
 .btn-link {
     font-weight: 400;
-    color: #7ab730;
+    color: #f6ce11;
     text-decoration: none;
 }
 
 .btn-link:hover {
-    color: #527a20;
+    color: #967d00;
     text-decoration: underline;
 }
 
@@ -3462,7 +3462,7 @@ input[type="button"].btn-block {
 .dropdown-item:active {
     color: #fff;
     text-decoration: none;
-    background-color: #7ab730;
+    background-color: #f6ce11;
 }
 
 .dropdown-item.disabled,
@@ -3756,8 +3756,8 @@ input[type="button"].btn-block {
 
 .custom-control-input:checked ~ .custom-control-label::before {
     color: #fff;
-    border-color: #7ab730;
-    background-color: #7ab730;
+    border-color: #f6ce11;
+    background-color: #f6ce11;
 }
 
 .custom-control-input:focus ~ .custom-control-label::before {
@@ -3821,8 +3821,8 @@ input[type="button"].btn-block {
 .custom-checkbox
     .custom-control-input:indeterminate
     ~ .custom-control-label::before {
-    border-color: #7ab730;
-    background-color: #7ab730;
+    border-color: #f6ce11;
+    background-color: #f6ce11;
 }
 
 .custom-checkbox
@@ -4060,7 +4060,7 @@ input[type="button"].btn-block {
     width: 1rem;
     height: 1rem;
     margin-top: -0.25rem;
-    background-color: #7ab730;
+    background-color: #f6ce11;
     border: 0;
     transition: background-color 0.15s ease-in-out,
         border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -4089,7 +4089,7 @@ input[type="button"].btn-block {
 .custom-range::-moz-range-thumb {
     width: 1rem;
     height: 1rem;
-    background-color: #7ab730;
+    background-color: #f6ce11;
     border: 0;
     transition: background-color 0.15s ease-in-out,
         border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -4121,7 +4121,7 @@ input[type="button"].btn-block {
     margin-top: 0;
     margin-right: 0.2rem;
     margin-left: 0.2rem;
-    background-color: #7ab730;
+    background-color: #f6ce11;
     border: 0;
     transition: background-color 0.15s ease-in-out,
         border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -4253,7 +4253,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
     color: #fff;
-    background-color: #7ab730;
+    background-color: #f6ce11;
 }
 
 .nav-fill > .nav-link,
@@ -4911,14 +4911,14 @@ input[type="button"].btn-block {
     padding: 0.5rem 0.75rem;
     margin-left: -1px;
     line-height: 1.25;
-    color: #7ab730;
+    color: #f6ce11;
     background-color: #fff;
     border: 1px solid #dee2e6;
 }
 
 .page-link:hover {
     z-index: 2;
-    color: #527a20;
+    color: #967d00;
     text-decoration: none;
     background-color: #e9ecef;
     border-color: #dee2e6;
@@ -4937,8 +4937,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
     z-index: 3;
     color: #fff;
-    background-color: #7ab730;
-    border-color: #7ab730;
+    background-color: #f6ce11;
+    border-color: #f6ce11;
 }
 
 .page-item.disabled .page-link {
@@ -5001,7 +5001,7 @@ a.badge:focus {
 
 .badge-primary {
     color: #fff;
-    background-color: #7ab730;
+    background-color: #f6ce11;
 }
 
 a.badge-primary:hover,
@@ -5318,7 +5318,7 @@ a.badge-dark.focus {
     color: #fff;
     text-align: center;
     white-space: nowrap;
-    background-color: #7ab730;
+    background-color: #f6ce11;
     transition: width 0.6s ease;
 }
 
@@ -5405,8 +5405,8 @@ a.badge-dark.focus {
 .list-group-item.active {
     z-index: 2;
     color: #fff;
-    background-color: #7ab730;
-    border-color: #7ab730;
+    background-color: #f6ce11;
+    border-color: #f6ce11;
 }
 
 .list-group-item + .list-group-item {
@@ -6493,7 +6493,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-    background-color: #7ab730 !important;
+    background-color: #f6ce11 !important;
 }
 
 a.bg-primary:hover,
@@ -6629,7 +6629,7 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-    border-color: #7ab730 !important;
+    border-color: #f6ce11 !important;
 }
 
 .border-secondary {
@@ -9673,12 +9673,12 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-    color: #7ab730 !important;
+    color: #f6ce11 !important;
 }
 
 a.text-primary:hover,
 a.text-primary:focus {
-    color: #527a20 !important;
+    color: #967d00 !important;
 }
 
 .text-secondary {
@@ -9937,7 +9937,7 @@ h6,
 
 .navbar-light .navbar-nav .nav-link:hover,
 .navbar-light .navbar-nav .nav-link.active {
-    color: #7ab730;
+    color: #f6ce11;
 }
 
 @media (max-width: 991.98px) {
@@ -10037,14 +10037,14 @@ h6,
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 2px solid #7ab730;
+    border: 2px solid #f6ce11;
     background: #ffffff;
-    color: #7ab730;
+    color: #f6ce11;
     transition: 0.5s;
 }
 
 .service-item:hover i {
-    background: #7ab730;
+    background: #f6ce11;
     color: #ffffff;
 }
 
@@ -10142,7 +10142,7 @@ h6,
 
 .testimonial-carousel .owl-dot.active {
     width: 40px;
-    background: #7ab730;
+    background: #f6ce11;
 }
 
 .testimonial-carousel .owl-item.center .testimonial-text {
@@ -10167,7 +10167,7 @@ h6,
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background: #7ab730;
+    background: #f6ce11;
 }
 
 .blog-date::after {
