--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6254,7 +6254,7 @@ a.close.disabled {
     display: none;
     float: left;
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     margin-right: -100%;
     backface-visibility: hidden;
     transition: transform 0.6s ease-in-out;
