--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10187,3 +10187,41 @@ h6,
     padding: 0;
     list-style-type: none;
 }
+
+/*
+*
+* ==========================================
+* ajax loading
+* ==========================================
+*
+*/
+
+#ajax-loading {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+    width: 100%;
+    height: 100%;
+    outline: 0;
+    z-index: 1060;
+    overflow: hidden;
+}
+
+#ajax-loading .loading-bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100% !important;
+    background: rgb(0 0 0 / 65%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#ajax-loading .loading-bg .loading-svg {
+    width: auto;
+    flex-wrap: wrap;
+    width: 100px;
+}
